<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/large"
        android:paddingLeft="@dimen/huge"
        android:paddingRight="@dimen/huge"
        android:paddingTop="@dimen/huge">

        <requestFocus />

        <EditText
            android:id="@+id/sign_up_edit_text_widget_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large"
            android:background="@drawable/rounded_edittext_background"
            android:hint="@string/sign_up_login_hint_name"
            android:imeOptions="actionNone|actionSearch|actionSend|actionNext|actionDone|actionPrevious"
            android:padding="@dimen/edit_text_padding_login_screen_only" />

        <EditText
            android:id="@+id/sign_up_edit_text_widget_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large"
            android:background="@drawable/rounded_edittext_background"
            android:hint="@string/sign_up_login_hint_email"
            android:imeOptions="actionNone|actionSearch|actionSend|actionNext|actionDone|actionPrevious"
            android:padding="@dimen/edit_text_padding_login_screen_only" />

        <EditText
            android:id="@+id/sign_up_edit_text_widget_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large"
            android:background="@drawable/rounded_edittext_background"
            android:hint="@string/sign_up_login_hint_mobile"
            android:imeOptions="actionNone|actionSearch|actionSend|actionNext|actionDone|actionPrevious"
            android:inputType="phone"
            android:padding="@dimen/edit_text_padding_login_screen_only" />

        <EditText
            android:id="@+id/sign_up_edit_text_widget_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large"
            android:background="@drawable/rounded_edittext_background"
            android:hint="@string/sign_up_login_hint_password"
            android:imeOptions="actionGo|actionSearch|actionSend|actionNext|actionDone|actionPrevious"
            android:inputType="textPassword"
            android:padding="@dimen/edit_text_padding_login_screen_only" />

        <EditText
            android:id="@+id/sign_up_edit_text_widget_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large"
            android:background="@drawable/rounded_edittext_background"
            android:hint="@string/sign_up_login_hint_confirm_password"
            android:imeOptions="actionGo|actionSearch|actionSend|actionNext|actionDone|actionPrevious"
            android:inputType="textPassword"
            android:padding="@dimen/edit_text_padding_login_screen_only" />

        <Button
            android:id="@+id/sign_up_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/medium"
            android:layout_marginTop="@dimen/large"
            android:background="@drawable/rounded_button_app_color"
            android:onClick="SignUpButtonHandler"
            android:text="@string/sign_up_login_main_button_label_sign_up"
            android:textColor="@color/white" />
    </LinearLayout>
</ScrollView>
