<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/large"
        android:paddingLeft="@dimen/huge"
        android:paddingRight="@dimen/huge"
        android:paddingTop="@dimen/huge">

        <requestFocus />

        <EditText
            android:id="@+id/login_edit_text_widget_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large"
            android:background="@drawable/rounded_edittext_background"
            android:hint="@string/sign_up_login_hint_email_or_mobile"
            android:padding="@dimen/edit_text_padding_login_screen_only" />

        <EditText
            android:id="@+id/login_edit_text_widget_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large"
            android:background="@drawable/rounded_edittext_background"
            android:hint="@string/sign_up_login_hint_password"
            android:inputType="textPassword"
            android:padding="@dimen/edit_text_padding_login_screen_only" />

        <CheckBox
            android:id="@+id/remember_log_in_checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginTop="@dimen/large"
            android:padding="@dimen/check_box_padding_login_screen_only"
            android:text="Remember"
            android:textColor="@color/colorAccent" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/medium"
            android:layout_marginTop="@dimen/large"
            android:background="@drawable/rounded_button_app_color"
            android:text="@string/sign_up_login_main_button_label_login"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/login_text_view_forgot_password_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="@dimen/medium"
            android:text="@string/sign_up_login_button_forgot_password"
            android:textColor="@color/colorAccent" />
    </LinearLayout>
</ScrollView>
