<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/vertical_gradient_app_color" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/large"
        android:layout_marginRight="@dimen/large"
        android:layout_marginTop="120dp"
        android:src="@drawable/app_logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/introduction_text_view_catch_phrase_message"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/medium"
        android:text="@string/introduction_screen_catch_phrase_title"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/introduction_text_view_catch_phrase_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/introduction_layout_buttons"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/large"
        android:layout_marginLeft="@dimen/huge"
        android:layout_marginRight="@dimen/huge"
        android:gravity="center"
        android:text="@string/introduction_screen_catch_phrase_text"
        android:textColor="@color/white" />

    <LinearLayout
        android:id="@+id/introduction_layout_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/medium"
        android:layout_marginLeft="@dimen/large"
        android:layout_marginRight="@dimen/large"
        android:orientation="horizontal">

        <Button
            android:id="@+id/introduction_button_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/medium"
            android:layout_weight="1.0"
            android:background="@drawable/rounded_button_normal"
            android:text="@string/introduction_screen_login_button"
            android:textColor="@color/colorAccent" />

        <Button
            android:id="@+id/introduction_button_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:background="@drawable/rounded_button_normal"
            android:text="@string/introduction_screen_sign_up_button"
            android:textColor="@color/colorAccent" />

    </LinearLayout>
</RelativeLayout>
